feat: add training, inference and fine tuning with deberta

--- a/requirements_local.txt
+++ b/requirements_local.txt
@@ -1,5 +1,18 @@
+# Only local, since fox loads pytorch
+torch
+torchvision
+torchaudio
+
+# For both
 wandb
 transformers
 torch
 joblib
 scikit-learn
+datasets
+GPUtil
+numba
+seaborn
+codecarbon
+python-dotenv
+colorama
